--- a/styles.css
+++ b/styles.css
@@ -6,4 +6,27 @@ body {
 
 main {
   flex: 1 0 auto;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
+.body {
+  font-family: futura;
+  font-size: 2em;
+  margin: 5px;
+}
+
+.selector {
+  display: block;
+}
+
+form {
+  width: 50vw;
+}
+
+label {
+  font-size: 1em;
+  color: black;
+  font-family: futura;
 }
