--- a/styles.css
+++ b/styles.css
@@ -4,11 +4,24 @@ body {
   flex-direction: column;
 }
 
+.nav-wrapper {
+  background-color: black;
+}
+
+.page-footer {
+  background-color: black;
+}
+
 main {
   flex: 1 0 auto;
   display: flex;
   flex-direction: column;
   align-items: center;
+}
+
+div.col {
+  display: flex;
+  flex-direction: row;
 }
 
 .body {
@@ -21,6 +34,19 @@ main {
   display: block;
 }
 
+.card .card-title {
+  color: black;
+  font-size: 3em;
+}
+
+div .card-image {
+  width: 25vw;
+}
+
+img {
+  height: 50vh;
+}
+
 form {
   width: 50vw;
 }
@@ -29,4 +55,11 @@ label {
   font-size: 1em;
   color: black;
   font-family: futura;
+}
+
+
+}
+
+}
+
 }
